// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FolderItem Component > should match read snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      aria-describedby="react-aria-description-0"
      class="group flex h-12 cursor-pointer select-none items-center rounded-lg bg-gray-200 px-2 text-gray-600 hover:text-gray-800"
      draggable="true"
    >
      <div
        class="relative flex flex-1 flex-row items-center overflow-hidden"
      >
        <div
          class="p-1"
        >
          <svg
            style="width: 24px; height: 24px;"
          >
            <use
              href="icons.svg#folder-close"
            />
          </svg>
        </div>
        <div
          class="ml-3 max-h-6 truncate font-medium text-slate-200"
        >
          Chronicle Labs
        </div>
      </div>
      <div>
        <svg
          class="hidden group-hover:inline-block"
          style="width: 24px; height: 24px;"
        >
          <use
            href="icons.svg#vertical-dots"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FolderItem Component > should match write snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      aria-describedby="react-aria-description-1"
      class="group flex h-12 cursor-pointer select-none items-center rounded-lg bg-gray-200 px-2 text-gray-800"
      draggable="true"
    >
      <div
        class="relative flex flex-1 flex-row items-center overflow-hidden"
      >
        <div
          class="p-1"
        >
          <svg
            style="width: 24px; height: 24px;"
          >
            <use
              href="icons.svg#folder-close"
            />
          </svg>
        </div>
        <div
          class="flex items-center ml-3 flex-1 font-medium"
        >
          <div
            class="w-full"
            data-rac=""
          >
            <input
              class="w-full bg-inherit outline-none"
              data-focus-visible="true"
              data-focused="true"
              data-rac=""
              id="react-aria-:r2:"
              title=""
              type="text"
              value="Chronicle Labs"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
